--- a/financial-companies/package.json
+++ b/financial-companies/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@mft/eslint-config-momentumft": "^4.0.0",
