--- a/admin/package.json
+++ b/admin/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.3",
     "express": "^4.17.1",
+    "json2csv": "^6.0.0-alpha.2",
     "ramda": "^0.27.1",
     "request": "^2.88.2",
     "winston": "^3.11.0"
