--- a/admin/package.json
+++ b/admin/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "develop": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@mft/eslint-config-momentumft": "^4.0.0",
     "eslint": "^6.8.0",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
